--- a/conf/development.yaml
+++ b/conf/development.yaml
@@ -1,36 +1,67 @@
 
-depthpriceclient:
-  wsc:
-    scheme: wss
-    host: engine2.kryptono.exchange
-    path: /ws/v1/dp/BTC_USDT
+# depthpriceclient:
+#   wsc:
+#     scheme: wss
+#     host: engine2.kryptono.exchange
+#     path: /ws/v1/dp/BTC_USDT
 
-historytradeclient:
-  wsc:
-    scheme: wss
-    host: engine2.kryptono.exchange
-    path: /ws/v1/ht/BTC_USDT
+# historytradeclient:
+#   wsc:
+#     scheme: wss
+#     host: engine2.kryptono.exchange
+#     path: /ws/v1/ht/BTC_USDT
 
-candlesticksclient:
-  wsc:
-    scheme: wss
-    host: engine2.kryptono.exchange
-    path: /ws/v1/cs/BTC_USDT@1m
+# candlesticksclient:
+#   wsc:
+#     scheme: wss
+#     host: engine2.kryptono.exchange
+#     path: /ws/v1/cs/BTC_USDT@1m
 
-ticker24hclient:
-  wsc:
-    scheme: wss
-    host: engine2.kryptono.exchange
-    path: /ws/v1/tk
+# ticker24hclient:
+#   wsc:
+#     scheme: wss
+#     host: engine2.kryptono.exchange
+#     path: /ws/v1/tk
 
-cerberusclient:
-  wsc:
-    scheme: wss
-    host: engine2.kryptono.exchange
-    path: /ws/v1/cr/BTC_USDT
+# cerberusclient:
+#   wsc:
+#     scheme: wss
+#     host: engine2.kryptono.exchange
+#     path: /ws/v1/cr/BTC_USDT
 
 reloadsymbolclient:
   wsc:
     scheme: ws
     host: 127.0.0.1:15401
     path: /dataws/reloadsymbol
+
+
+depthpriceclient:
+  wsc:
+    scheme: ws
+    host: 0.0.0.0:15501
+    path: /ws/v1/dp/BTC_USDT
+
+historytradeclient:
+  wsc:
+    scheme: ws
+    host: 0.0.0.0:15701
+    path: /ws/v1/ht/BTC_USDT
+
+candlesticksclient:
+  wsc:
+    scheme: ws
+    host: 0.0.0.0:15601
+    path: /ws/v1/cs/BTC_USDT@1m
+
+ticker24hclient:
+  wsc:
+    scheme: ws
+    host: 0.0.0.0:15801
+    path: /ws/v1/tk
+
+cerberusclient:
+  wsc:
+    scheme: ws
+    host: 0.0.0.0:18001
+    path: /ws/v1/cr/BTC_USDT
